fix: spacing of error message in task

--- a/src/index.css
+++ b/src/index.css
@@ -364,3 +364,7 @@ aside {
 .mt-4 {
     margin-top: 2rem;
 }
+
+.mb-4 {
+    margin-bottom: 2rem;
+}
